0.13 Tue Aug  9 21:25:20 EDT 2005

  Signal handlers should be 'localed', so as not to mess with others' 
  code. -- Thanks to David Wheeler

0.12 Sun Jul 17 02:14:57 EDT 2005

  Test suite improvements from Mattia Barbon

0.11 Fri Jul  8 22:56:01 EDT 2005
  Bogus META.yml broke signature checks. Thanks to sungo.

0.10 Tue Jun 28 11:27:58 EDT 2005

- Allow separate treatment of STDIN and STDOUT handles to the server.  This
  gives support for HTTP::Server::Simple::Recorder.

0.09 Tue Apr 19 21:43:31 EDT 2005

- Now we set the GATEWAY_INTERFACE metavariable in H:S:S:CGI.

0.08 Sat Apr 16 01:27:17 EDT 2005

- New tests for HTTP::Server:Simple::CGI from hide.

0.07 Sat Mar 26 14:25:38 CST 2005

- PAUSE broke :/

0.05 Sat Mar 26 14:14:54 CST 2005

- Fix a bug in HTTP::Server::Simple::CGI that clobbered CGI ENV variables
  in some cases. Thanks, Hide.
- New public subclass-overridable method ->net_server() that can
  optionally take a Net::Server subclass name and use it to replace
  the default ->run() method. -- Autrijus Tang

0.04 Tue Mar 22 23:34:36 CST 2005
- Changed ->headers calling conventions. This may break backwards compat,
  but is cleaner and safer.
- Fixed bugs in ::CGI that broke http header handling
- Refactored code to be more transparent
- Patch from Sebastian Riedel to do proper parsing of form data from STDIN

0.03_03 Fri Mar 18 15:09:52 EST 2005
- Finish fixes from http://rt.cpan.org/NoAuth/Bug.html?id=11409


0.03_02 Thu Feb 17 23:34:00 NZDT 2005
- Make test script not depend on LWP
- Add ->header(), and various generic hook capabilities
- Made HTTP::Server::Simple::CGI use those hooks
- Add ->bad_request(), for protocol errors

0.03_01 Thu Feb 17 21:39:34 NZDT 2005
- Add ->setup() and ->handler()
- Add support for specifying a host to bind listener to
- Split out CGI.pm support into sub-class
- Add Changes file to MANIFEST

0.03 Wed Jan 26 08:55:34 EST 2005

- Test fixes for Win32