@@ -1,3 +1,6 @@
+
+  Split out HTTP::Server::Simple::CGI::Environment to support non-CGI.pm CGIs
+
 0.13 Tue Aug  9 21:25:20 EDT 2005
 
   Signal handlers should be 'localed', so as not to mess with others' 
